tests/baselines/reference/symbolProperty42(strict=true).errors.txt
symbolProperty42.ts(2,5): error TS2394: This overload signature is not compatible with its implementation signature.
symbolProperty42.ts(3,12): error TS2388: Function overload must not be static.
symbolProperty42.ts(4,5): error TS2387: Function overload must be static.


==== symbolProperty42.ts (3 errors) ====
    class C {
        [Symbol.iterator](x: string): string;
        ~~~~~~~~~~~~~~~~~
!!! error TS2394: This overload signature is not compatible with its implementation signature.
!!! related TS2750 symbolProperty42.ts:4:5: The implementation signature is declared here.
        static [Symbol.iterator](x: number): number;
               ~~~~~~~~~~~~~~~~~
!!! error TS2388: Function overload must not be static.
        [Symbol.iterator](x: any) {
        ~~~~~~~~~~~~~~~~~
!!! error TS2387: Function overload must be static.
            return undefined;
        }
    }